06_rect/grade.txt
Grading at Wed Jul 22 11:53:44 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:56:15: error: too many arguments to function ‘min’
   int width = min(r1.x + r1.width, r2.x, r2.width) - x;
               ^
rectangle.c:5:5: note: declared here
 int min (int a, int b) {
     ^
rectangle.c:63:3: error: expected ‘;’ before ‘return’
   return inter_rect;
   ^
rectangle.c:67:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void printRectangle(rectangle r) {
 ^
rectangle.c:78:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int main (void) {
 ^
rectangle.c:78:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main (void) {
     ^
rectangle.c:183:1: error: expected declaration or statement at end of input
 }
 ^
rectangle.c:183:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
